<resources>
    <string name="app_name">HaveIBeenPwned API</string>
    <string name="searchName">Name</string>
    <string name="searchButton">Search</string>
    <string name="DataTypesText">Leaked data types :</string>
    <string name="BreachTitleText">BreachTitle</string>
    <string name="domainText">Domain :</string>
    <string name="pwnCountText">Pwn count :</string>
    <string name="dateText">Date :</string>
    <string name="breach_logo_description_text">Breach Logo</string>
    <string name="breach_title">Breach title</string>
    <string name="bottom_navigation_menu_breaches_list">Breaches list</string>
    <string name="bottom_navigation_menu_line_chart">Line chart</string>
    <string name="bottom_navigation_menu_bar_chart">Bar chart</string>
</resources>
